--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonial Section</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="main-container">
+<h1>Testimonials</h1>
+        <div class="testimonial">
+            <p class="text">"This is a great product! Highly recommended."</p>
+            <p class="author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p class="text">"Excellent service and support. Will buy again."</p>
+            <p class="author">- Jane Smith</p>
+        </div>
+    </div>
 </body>
-
 </html>
